--- a/index.html
+++ b/index.html
@@ -784,71 +784,6 @@
                         </div>
                     </div>
 
-                    <div class="enhanced-slide" data-category="network">
-                        <div class="slide-image-container">
-                            <img src="images/realisations/cablage-reseau-camera-securite-professionnel.webp" alt="Baie de brassage – Câblage RJ45 structuré Cat.6" loading="lazy" width="378" height="473">
-                            <button class="zoom-btn" aria-label="Agrandir l'image">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <circle cx="11" cy="11" r="8"/>
-                                    <path d="m21 21-4.35-4.35"/>
-                                    <line x1="11" y1="8" x2="11" y2="14"/>
-                                    <line x1="8" y1="11" x2="14" y2="11"/>
-                                </svg>
-                            </button>
-                        </div>
-                        <div class="enhanced-slide-content">
-                            <div class="slide-category">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                                    <line x1="3" y1="9" x2="21" y2="9"/>
-                                    <line x1="9" y1="3" x2="9" y2="21"/>
-                                </svg>
-                                Réseau & Câblage
-                            </div>
-                            <h3>Baie de brassage – Câblage RJ45 structuré Cat.6</h3>
-                            <p>Câblage réseau Cat.6 parfaitement aligné et gainé dans une baie de brassage 19", avec guides et attaches pour un cheminement optimisé. Chaque liaison est rigoureusement organisée pour garantir performance, maintenance rapide et esthétique irréprochable. Une installation conforme aux standards professionnels pour garantir un réseau stable et évolutif.</p>
-                            <div class="slide-tags">
-                                <span class="tag">Baie 19"</span>
-                                <span class="tag">Câblage structuré</span>
-                                <span class="tag">RJ45 Cat.6</span>
-                                <span class="tag">Installation professionnelle</span>
-                                <span class="tag">Optimisation réseau</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="enhanced-slide" data-category="network">
-                        <div class="slide-image-container">
-                            <img src="images/realisations/installation-systeme-videosurveillance-entreprise.webp" alt="Rack de brassage 48 ports et test câblage" loading="lazy">
-                            
-                            <button class="zoom-btn" aria-label="Agrandir l'image">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <circle cx="11" cy="11" r="8"/>
-                                    <path d="m21 21-4.35-4.35"/>
-                                    <line x1="11" y1="8" x2="11" y2="14"/>
-                                    <line x1="8" y1="11" x2="14" y2="11"/>
-                                </svg>
-                            </button>
-                        </div>
-                        <div class="enhanced-slide-content">
-                            <div class="slide-category">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                                    <line x1="3" y1="9" x2="21" y2="9"/>
-                                    <line x1="9" y1="3" x2="9" y2="21"/>
-                                </svg>
-                                Réseau & Câblage
-                            </div>
-                            <h3>Test de Performance Réseau</h3>
-                            <p>Validation complète avec testeur de câblage professionnel et rapport de certification</p>
-                            <div class="slide-tags">
-                                <span class="tag">Test certifié</span>
-                                <span class="tag">Rapport détaillé</span>
-                                <span class="tag">Garantie 25 ans</span>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="enhanced-slide" data-category="videosurveillance">
                         <div class="slide-image-container">
                             <img src="images/realisations/camera-exterieur-immeuble-syndic-montpellier.webp" alt="Caméras Bullet – Vidéosurveillance pour Syndic Montpellier" loading="lazy">
@@ -1080,7 +1015,7 @@
                     <div class="enhanced-slide" data-category="videosurveillance">
                         <div class="slide-image-container">
                             <img src="images/realisations/interphone-video-camera-securite-maison.webp" alt="Caméras Bullet Dahua – Sécurisation d'habitation à Castelnau-le-Lez" loading="lazy">
-                            
+
                             <button class="zoom-btn" aria-label="Agrandir l'image">
                                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <circle cx="11" cy="11" r="8"/>
@@ -1109,6 +1044,72 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="enhanced-slide" data-category="videosurveillance">
+                        <div class="slide-image-container">
+                            <img src="grabels/installation-vidéosurveillance-Grabels_3.webp" alt="Système de vidéosurveillance multi-caméras – Installation professionnelle Grabels" loading="lazy">
+
+                            <button class="zoom-btn" aria-label="Agrandir l'image">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="11" cy="11" r="8"/>
+                                    <path d="m21 21-4.35-4.35"/>
+                                    <line x1="11" y1="8" x2="11" y2="14"/>
+                                    <line x1="8" y1="11" x2="14" y2="11"/>
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="enhanced-slide-content">
+                            <div class="slide-category">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="3"/>
+                                    <path d="M20 12c0-4.42-3.58-8-8-8s-8 3.58-8 8 3.58 8 8 8 8-3.58 8-8z"/>
+                                </svg>
+                                VIDÉOSURVEILLANCE PROFESSIONNELLE
+                            </div>
+                            <h3>Système de surveillance complet – Installation multi-caméras à Grabels</h3>
+                            <p>Déploiement d'un système de vidéosurveillance professionnel comprenant 4 caméras haute résolution (2 caméras dômes et 2 caméras bullet) sur bâtiment commercial. Installation stratégique pour couverture à 360° des accès et zones sensibles, câblage sécurisé, enregistrement centralisé et accès distant. Solution complète assurant la protection des biens et la surveillance continue des locaux professionnels.</p>
+                            <div class="slide-tags">
+                                <span class="tag">4 Caméras HD</span>
+                                <span class="tag">Grabels</span>
+                                <span class="tag">Couverture 360°</span>
+                                <span class="tag">Installation Professionnelle</span>
+                                <span class="tag">Accès à distance</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="enhanced-slide" data-category="videosurveillance">
+                        <div class="slide-image-container">
+                            <img src="images/caméra-surveillance-maison-particulier.webp" alt="Caméra PTZ 360° avec alarme lumineuse – Protection maison et commerce" loading="lazy">
+
+                            <button class="zoom-btn" aria-label="Agrandir l'image">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="11" cy="11" r="8"/>
+                                    <path d="m21 21-4.35-4.35"/>
+                                    <line x1="11" y1="8" x2="11" y2="14"/>
+                                    <line x1="8" y1="11" x2="14" y2="11"/>
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="enhanced-slide-content">
+                            <div class="slide-category">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="3"/>
+                                    <path d="M20 12c0-4.42-3.58-8-8-8s-8 3.58-8 8 3.58 8 8 8 8-3.58 8-8z"/>
+                                </svg>
+                                VIDÉOSURVEILLANCE INTELLIGENTE
+                            </div>
+                            <h3>Caméra PTZ 360° avec système d'alerte visuelle – Solution pour maisons et petits commerces</h3>
+                            <p>Installation d'une caméra PTZ compacte avec rotation 360°, équipée d'un système d'alarme intégré et d'un projecteur lumineux dissuasif. Idéale pour la surveillance résidentielle et les petits commerces, cette solution tout-en-un combine détection de mouvement, alerte sonore et visuelle, vision nocturne et enregistrement haute définition. Contrôle à distance via smartphone pour une sécurité active 24/7.</p>
+                            <div class="slide-tags">
+                                <span class="tag">PTZ 360°</span>
+                                <span class="tag">Alarme intégrée</span>
+                                <span class="tag">Lumière d'alerte</span>
+                                <span class="tag">Maisons & Commerces</span>
+                                <span class="tag">Smart Camera</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Enhanced Navigation Buttons -->
@@ -1132,43 +1133,43 @@
                         <div class="thumbnail-overlay"></div>
                     </div>
                     <div class="thumbnail-item" data-slide="1">
-                        <img src="images/realisations/cablage-reseau-camera-securite-professionnel.webp" alt="Thumbnail 2" loading="lazy" width="60" height="75">
+                        <img src="images/realisations/camera-exterieur-immeuble-syndic-montpellier.webp" alt="Thumbnail 2" loading="lazy">
+                        <div class="thumbnail-overlay"></div>
+                    </div>
+                    <div class="thumbnail-item" data-slide="2">
+                        <img src="images/realisations/camera-dome-surveillance-magasin-aldi.webp" alt="Thumbnail 3" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
                     <div class="thumbnail-item" data-slide="3">
-                        <img src="images/realisations/installation-systeme-videosurveillance-entreprise.webp" alt="Thumbnail 5" loading="lazy">
+                        <img src="images/realisations/camera-ptz-exterieur-haute-definition.webp" alt="Thumbnail 4" loading="lazy">
+                        <div class="thumbnail-overlay"></div>
+                    </div>
+                    <div class="thumbnail-item" data-slide="4">
+                        <img src="images/realisations/installation-camera-surveillance-magasin-prix.webp" alt="Thumbnail 5" loading="lazy">
+                        <div class="thumbnail-overlay"></div>
+                    </div>
+                    <div class="thumbnail-item" data-slide="5">
+                        <img src="images/realisations/camera-surveillance-wifi-smartphone-application.webp" alt="Thumbnail 6" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
                     <div class="thumbnail-item" data-slide="6">
-                        <img src="images/realisations/camera-exterieur-immeuble-syndic-montpellier.webp" alt="Thumbnail 7" loading="lazy">
+                        <img src="images/realisations/camera-exterieur-maison-angle-facade.webp" alt="Thumbnail 7" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
                     <div class="thumbnail-item" data-slide="7">
-                        <img src="images/realisations/camera-dome-surveillance-magasin-aldi.webp" alt="Thumbnail 8" loading="lazy">
+                        <img src="images/realisations/camera-dome-interieur-controle-acces.webp" alt="Thumbnail 8" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
                     <div class="thumbnail-item" data-slide="8">
-                        <img src="images/realisations/camera-ptz-exterieur-haute-definition.webp" alt="Thumbnail 9" loading="lazy">
+                        <img src="images/realisations/interphone-video-camera-securite-maison.webp" alt="Thumbnail 9" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
                     <div class="thumbnail-item" data-slide="9">
-                        <img src="images/realisations/installation-camera-surveillance-magasin-prix.webp" alt="Thumbnail 10" loading="lazy">
+                        <img src="grabels/installation-vidéosurveillance-Grabels_3.webp" alt="Thumbnail 10" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
                     <div class="thumbnail-item" data-slide="10">
-                        <img src="images/realisations/camera-surveillance-wifi-smartphone-application.webp" alt="Thumbnail 11" loading="lazy">
-                        <div class="thumbnail-overlay"></div>
-                    </div>
-                    <div class="thumbnail-item" data-slide="11">
-                        <img src="images/realisations/camera-exterieur-maison-angle-facade.webp" alt="Thumbnail 12" loading="lazy">
-                        <div class="thumbnail-overlay"></div>
-                    </div>
-                    <div class="thumbnail-item" data-slide="12">
-                        <img src="images/realisations/camera-dome-interieur-controle-acces.webp" alt="Thumbnail 14" loading="lazy">
-                        <div class="thumbnail-overlay"></div>
-                    </div>
-                    <div class="thumbnail-item" data-slide="13">
-                        <img src="images/realisations/interphone-video-camera-securite-maison.webp" alt="Thumbnail 16" loading="lazy">
+                        <img src="images/caméra-surveillance-maison-particulier.webp" alt="Thumbnail 11" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
                 </div>
