--- a/alarme/installation-alarme-montpellier.html
+++ b/alarme/installation-alarme-montpellier.html
@@ -74,6 +74,38 @@
         <div class="hero-content">
             <div class="split-border-card">
                 <img src="icon/alarme-pour-apartment.svg" alt="Alarme pour appartement" class="card-icon">
+                <div class="card-content-inner">
+                    <h2 class="card-title">Je protège mon appartement</h2>
+                    <a href="#" class="card-button">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M2 12h20M15 5l7 7-7 7"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+
+            <div class="split-border-card">
+                <img src="icon/Alarme-maison.svg" alt="Alarme pour maison" class="card-icon">
+                <div class="card-content-inner">
+                    <h2 class="card-title">Je protège ma<br>maison</h2>
+                    <a href="#" class="card-button">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M2 12h20M15 5l7 7-7 7"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+
+            <div class="split-border-card">
+                <img src="icon/alarme-professionels-entreprise.svg" alt="Alarme pour entreprise" class="card-icon">
+                <div class="card-content-inner">
+                    <h2 class="card-title">Je protège mon<br>entreprise</h2>
+                    <a href="#" class="card-button">
+                        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M2 12h20M15 5l7 7-7 7"/>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
